{
    "name": "InputMap",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "5243c63c-787c-4be0-847c-68521db3b61b",
            "actions": [
                {
                    "name": "MovementBinds",
                    "type": "Value",
                    "id": "6de325e9-df9c-4654-83aa-afdd2af90741",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AnalogMovementBinds",
                    "type": "Value",
                    "id": "4e93262a-4487-4015-9c02-1f77ed1afd7e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractionBinds",
                    "type": "Value",
                    "id": "56d2e259-c583-4d79-a04c-5bb7a714dcc7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PauseBinds",
                    "type": "Value",
                    "id": "22ba3be4-9094-4275-8abc-6242b4fffb1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMovement",
                    "type": "PassThrough",
                    "id": "d6f4a08c-4485-43f8-a9bd-bda9fe5fe1a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "KeyboardMainInputs",
                    "id": "509d4324-b538-46d7-8988-599b3c98f4de",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c8fb3a6a-75ab-4e90-a62d-93a38a6b7716",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7c5a196c-4598-44f4-b071-9c58c8b49e2c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6c536737-e2cc-4bda-a257-8b9be6164408",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "252094f2-55c7-400e-860e-e720009e6d7b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "6447f892-92fb-4bf9-90bf-6d69bd226788",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c1521e1c-51f8-4de1-bde6-c141a3ea863a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7600ae60-4536-4592-a3c8-4f717059807e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a097e2a-92e0-431f-8fbe-fae784396c6f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8b016fde-6f93-462d-a960-418c4fa69f18",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadStickInputs",
                    "id": "c05a0373-297f-4fdb-b175-53ccf8d7d2de",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4532c2a9-c4d3-4024-9486-509715857f55",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "05833c78-eeb4-43e0-9a09-009036a0ff1a",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ac3e0673-d849-4cdc-aa8e-a1714b17161c",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0d3fa989-e48d-46c5-96d9-dfffe823c054",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1631e315-80ec-44a1-b61a-4508bddfb87c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionBinds",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec71355e-8087-41b1-96be-f62e48efc7b3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractionBinds",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e3a280d-ca1b-4702-865c-341dc8b1f029",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseBinds",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccee54ff-b4cb-4f4b-9312-1f9a32b824d2",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseBinds",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "609cb927-2539-4781-8070-2ffb9189e9b5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8588b30d-b64f-490b-9f7b-1c401ae15d1f",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "KeyboardMainInputs",
                    "id": "6f34ee14-f561-49b2-9c51-1170673d3749",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ff0b5c8f-9dbc-418b-acb9-44fceaaddc9a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8997ea54-eb3e-4f9a-8975-dfbd41b910ed",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e5cd01fb-11ed-4221-a431-cdb2e2c5e732",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "829f0d56-f9cd-44f4-b454-abc0002de110",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadStickInputs",
                    "id": "e3dd6d89-c6bc-492f-a3f7-8682a264150e",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2e7f54a2-8c45-475a-9744-e19517a35f93",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7f0fd43e-be1c-4441-82a8-24e5125184ce",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "08cdf389-8c62-4bd0-9a11-b87652a86a8f",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c234a528-36d0-4818-8ce9-54a273804592",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "e046e3a1-2ff5-4f48-a541-cc8848e94db7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "36903c93-4ed2-4bf1-b729-91b0218e7415",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "622abb53-e347-4493-a906-715aed7c2eb8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8f4cb17b-80d7-4d98-bd1f-fd9f62be619c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c2c80414-03a1-4300-b963-dd8580a5a04e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnalogMovementBinds",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}